--- a/Web-Fundamentals_Assignment_2_AirBNB/index.html
+++ b/Web-Fundamentals_Assignment_2_AirBNB/index.html
@@ -24,12 +24,12 @@
             <input type="text" placeholder="Where are your going?">
             <label for="check-in">Check-in</label>
             <input type="date" name="check-in" id="check-in">
-            <label for="check-in">Check-out</label>
+            <label for="check-out">Check-out</label>
             <input type="date" name="check-out" id="check-out">
-            <label for="check-in">Guests</label>
+            <label for="guest">Guests</label>
             <input type="number" name="guest" id="guest" value="1">
             <p class="counter-name">San Francisco, CA</p>
-            <p class="room-rate">Rooms from &29/night</p>
+            <p class="room-rate">Rooms from $29/night</p>
             <img src="./images/Francisco.png" alt="San Francisco, CA image" class="country-image">
         </div>
 
@@ -39,7 +39,7 @@
                 <img src="./images/Gabs.png" alt="Gabs image" id="gabs-img">
                 <div class="mdl-main-dscr-room">
                     <h4><a href="#">"Gabs place"</a> - Amsterdam, Netherlands</h4>
-                    <p>&85/night</p>
+                    <p>$85/night</p>
                     <p>1 Review</p>
                 </div>
             </div>
@@ -58,7 +58,7 @@
             </div>
             <div class="dsply-right-main">
                 <p class="counter-name">Paris, France</p>
-                <p class="room-rate">Rooms from &20/night</p>
+                <p class="room-rate">Rooms from $20/night</p>
                 <img src="./images/Paris.png" alt="Paris Image" class="country-image">
             </div>
         </div>
@@ -80,7 +80,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Times & Privacy</a></li>
+                <li><a href="#">Temrs & Privacy</a></li>
                 <li>Biggest Deals: <a href="#">New York</a></li>
                 <li><a href="#">San Francisco</a></li>
                 <li><a href="#">Paris</a></li>
@@ -91,5 +91,6 @@
         <p> &copy; AirBed & Breakfast, Inc. </p>
     </footer>
 </body>
+
 
 </html>
